tests/ui/abi/sparcv8plus.sparc_feature_v8plus.stderr
error: +v8plus,-v9 (FIXME)
  --> $DIR/sparcv8plus.rs:36:1
   |
LL | compile_error!("+v8plus,-v9 (FIXME)");
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

